# kokoro-audiobook-reliable

./: AGENTS.md  LICENSE  README.md  convert_worker.py  main.py  pyproject.toml  queue_worker.py  text_processor.py  tts_generator.py  voices.py
